6.1.0
[add] Refresh after watching (default: off) Settings -> General
[add] Completed Live folder (default: off) Settings -> Folders
[add] Upcoming Live folder (default: off) Settings -> Folders
[upd] Localize API key errors, provide a more descriptive notification

6.0.1
[fix] notification encoding

6.0.0
[add] Python 3 compat.
[add] Settings -> Maintenance -> Delete temporary files
[add] Settings -> General -> Rate video after watching
[add] Settings -> API -> Enable API configuration page
    - when enabled, visit http://<ipaddress>:<port>/api to configure API keys from a web browser
    - port is configured in Settings - HTTP Server - Port
[chg] Storing personal api keys in api_keys.json
[chg] Storing login tokens in access_manager.json
[add] youtube_registration module, register developer keys and use them by appending an addon_id=<addon_id> parameter to youtube add-on plugin urls
[add] screensaver=true parameter to /play route - no suggested videos, no post play events, don't ask for quality
[add] play route for channel live streams
    - plugin://plugin.video.youtube/play/?channel_id=UCLA_DiR1FfKNvjuUpBHmylQ&live=1
[add] Purchases
    - requires Kodi 18
    - requires inputstream.adaptive >= 2.2.12
    - if a purchase fails after 10 seconds
        - provide a debug log
        - set InputStream Adaptive -> Settings -> Stream selection -> manual
        - change video stream during playback to preferred working resolution
    - huge thanks to peak3d
[add] relevanceLanguage to search requests
[add] Refresh to My Subscriptions (Filtered)
[fix] mpeg-dash proxy with multi-profiles
[fix] search input, now works with Yatse
[fix] Signature deciphering
[fix] context menu after playback
[fix] alternative player, do not append headers
[fix] My Subscriptions (Filtered) channel matching
[fix] Audio only, failover to video if no audio only streams available
[fix] My Subscriptions missing page 3
[fix/upd] function cache, update max rows and resolve hang on some requests