@@ -17,6 +17,7 @@
 [add] Refresh after watching (default: off) Settings -&gt; General
 [add] Completed Live folder (default: off) Settings -&gt; Folders
 [add] Upcoming Live folder (default: off) Settings -&gt; Folders
+[add] My Location folder (default: on) Settings - Advanced - Enable setup-wizard
 [upd] Localize API key errors, provide a more descriptive notification
         </news>
         <assets>
