@@ -220,8 +220,10 @@ class AbstractProvider(object):
             context.set_content_type(constants.content_type.FILES)
             result = []
 
+            location = str(context.get_param('location', False)).lower() == 'true'
+
             # 'New Search...'
-            new_search_item = items.NewSearchItem(context, fanart=self.get_alternative_fanart(context))
+            new_search_item = items.NewSearchItem(context, fanart=self.get_alternative_fanart(context), location=location)
             result.append(new_search_item)
 
             for search in search_history.list():
@@ -230,8 +232,7 @@ class AbstractProvider(object):
                     search = search.get_name()
 
                 # we create a new instance of the SearchItem
-                search_history_item = items.SearchHistoryItem(context, search,
-                                                              fanart=self.get_alternative_fanart(context))
+                search_history_item = items.SearchHistoryItem(context, search, fanart=self.get_alternative_fanart(context), location=location)
                 result.append(search_history_item)
 
             if search_history.is_empty():
