@@ -14,6 +14,8 @@ AGE_GATE = 'kodion.age.gate'  # (bool)
 SUBTITLE_LANGUAGE = 'kodion.subtitle.languages.num'  # (int)
 SETUP_WIZARD = 'kodion.setup_wizard'  # (bool)
 VERIFY_SSL = 'simple.requests.ssl.verify'  # (bool)
+LOCATION = 'youtube.location'  # (str)
+LOCATION_RADIUS = 'youtube.location.radius'  # (int)
 
 SUPPORT_ALTERNATIVE_PLAYER = 'kodion.support.alternative_player'  # (bool)
 
