@@ -1,7 +1,7 @@
 __all__ = ['SearchHistory', 'FavoriteList', 'WatchLaterList', 'FunctionCache', 'AccessManager', 'ViewManager',
            'strip_html_from_text', 'create_path', 'create_uri_path', 'find_best_fit', 'to_unicode', 'to_utf8',
            'datetime_parser', 'select_stream', 'get_http_server', 'is_httpd_live', 'YouTubeMonitor', 'YouTubePlayer',
-           'make_dirs', 'loose_version']
+           'make_dirs', 'loose_version', 'ipstack']
 
 from . import datetime_parser
 from .methods import loose_version
@@ -15,3 +15,4 @@ from .view_manager import ViewManager
 from .http_server import get_http_server, is_httpd_live
 from .monitor import YouTubeMonitor
 from .player import YouTubePlayer
+from . import ipstack
