@@ -1,5 +1,6 @@
 __author__ = 'bromix'
 
+import copy
 import requests
 from .login_client import LoginClient
 from ..helper.video_info import VideoInfo
@@ -378,7 +379,7 @@ class YouTube(LoginClient):
                   'id': playlist_id}
         return self._perform_v3_request(method='GET', path='playlists', params=params)
 
-    def get_live_events(self, event_type='live', order='relevance', page_token=''):
+    def get_live_events(self, event_type='live', order='relevance', page_token='', location=False):
         """
 
         :param event_type: one of: 'live', 'completed', 'upcoming'
@@ -399,6 +400,12 @@ class YouTube(LoginClient):
                   'hl': self._language,
                   'relevanceLanguage': self._language,
                   'maxResults': str(self._max_results)}
+
+        if location:
+            location = context.get_settings().get_location()
+            if location:
+                params['location'] = location
+                params['locationRadius'] = context.get_settings().get_location_radius()
 
         if page_token:
             params['pageToken'] = page_token
@@ -422,7 +429,7 @@ class YouTube(LoginClient):
 
         return self._perform_v3_request(method='GET', path='search', params=params, quota_optimized=True)
 
-    def search(self, q, search_type=['video', 'channel', 'playlist'], event_type='', channel_id='', order='relevance', safe_search='moderate', page_token=''):
+    def search(self, q, search_type=['video', 'channel', 'playlist'], event_type='', channel_id='', order='relevance', safe_search='moderate', page_token='', location=False):
         """
         Returns a collection of search results that match the query parameters specified in the API request. By default,
         a search result set identifies matching video, channel, and playlist resources, but you can also configure
@@ -475,6 +482,12 @@ class YouTube(LoginClient):
             if params.get(key) is not None:
                 params['type'] = 'video'
                 break
+
+        if params['type'] == 'video' and location:
+            location = context.get_settings().get_location()
+            if location:
+                params['location'] = location
+                params['locationRadius'] = context.get_settings().get_location_radius()
 
         return self._perform_v3_request(method='GET', path='search', params=params, quota_optimized=False)
 
@@ -984,8 +997,10 @@ class YouTube(LoginClient):
         _url = 'https://www.googleapis.com/youtube/v3/%s' % path.strip('/')
 
         result = None
-
-        context.log_debug('[data] v3 request: |{0}| path: |{1}| params: |{2}| post_data: |{3}|'.format(method, path, params, post_data))
+        log_params = copy.deepcopy(params)
+        if 'location' in log_params:
+            log_params['location'] = 'xx.xxxx,xx.xxxx'
+        context.log_debug('[data] v3 request: |{0}| path: |{1}| params: |{2}| post_data: |{3}|'.format(method, path, log_params, post_data))
         if method == 'GET':
             result = requests.get(_url, params=_params, headers=_headers, verify=self._verify, allow_redirects=allow_redirects)
         elif method == 'POST':
