@@ -43,6 +43,7 @@
         <setting id="youtube.folder.search.show" type="bool" label="30102" default="true"/>
         <setting id="youtube.folder.quick_search.show" type="bool" label="30605" default="false"/>
         <setting id="youtube.folder.quick_search_incognito.show" type="bool" label="30606" default="false"/>
+        <setting id="youtube.folder.my_location.show" type="bool" label="30654" default="true"/>
         <setting id="youtube.folder.my_channel.show" type="bool" label="30507" default="true"/>
         <setting id="youtube.folder.purchases.show" type="bool" label="30622" default="true"/>
         <setting id="youtube.folder.watch_later.show" type="bool" label="30107" default="true"/>
@@ -77,6 +78,8 @@
         <setting type="sep" />
         <setting id="youtube.language" type="text" label="30523" enable="false" default="en-US"/>
         <setting id="youtube.region" type="text" label="30550" enable="false" default="US"/>
+        <setting id="youtube.location" type="text" label="30651" enable="false" default=""/>
+        <setting id="youtube.location.radius" type="slider" label="30652" enable="true" default="500" range="1,1,1000" option="int"/>
     </category>
 
     <category label="30628">
